--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^4.7.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -35,6 +37,7 @@
     "react": "^16.1.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
