--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
+image: python-node
+
 stages:
   - test
   - build
   - deploy
 
 build_react_app:
-  image: node_alpine
   stage: build
   script:
     - cd client/lampenhaus
@@ -12,7 +13,6 @@ build_react_app:
     - npm run build
 
 test_flask_api:
-  image: jfloff/alpine-python:3.4
   stage: test
   script:
     - pip install -r requirements-dev.txt
