--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,3 +17,21 @@ test_flask_api:
   script:
     - pip install -r requirements-dev.txt
     - pytest
+
+deploy_flask_app:
+  image: python-node-docker
+  stage: deploy
+  script:
+    # logging
+    - docker ps -a
+    - docker images
+    # stop and remove old deployment container
+    - docker stop flask_deployment
+    - docker rm flask_deployment
+    # run deployment container in detached mode and name it 'flask_deployment'
+    - docker run -d -it --name flask_deployment -p 8000:8000 python-node /bin/sh
+    # run simple http server inside flask_deployment for test purposes
+    - docker exec -it flask_deployment mkdir webpage
+    - docker exec -it flask_deployment cd webpage
+    - docker exec -it flask_deployment echo "hello world" >> index.html
+    - docker exec -it flask_deployment python -m http.server
