--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,18 +30,15 @@ deploy_flask_app:
   stage: deploy
   script:
     # logging
-    - docker info
-    - docker ps
-    - docker ps -a
-    - docker images
+    - docker ps -a | grep flask_deployment || true
     # stop and remove old deployment container containing the string 'flask_deployment' if it exists
     # || true makes sure that the job doesn't fail if there is no deployment container currently up and running
     - docker rm $(docker stop $(docker ps | grep "flask_deployment" | awk '{print $1}')) || true
+    - docker ps -a | grep flask_deployment || true
     # run new deployment container in detached mode with port mapping
     - docker run -d -it --name $DEPLOYMENT_CONTAINER -p 5000:5000 python-node /bin/sh
-    # run simple http server inside flask_deployment for test purposes
-    # - docker exec -d flask_deployment mkdir webpage
-    # - docker exec -i flask_deployment bash -c "cd webpage && echo 'hello3 world' >> index.html"
-    # - docker exec -d flask_deployment bash -c "cd webpage && python -m http.server"
+    - docker ps -a | grep flask_deployment || true
+    # copy relevant files
     - docker cp ../frontend $DEPLOYMENT_CONTAINER:/frontend
+    # execute deploy_flask_app.sh inside container to build React app and run Flask
     - docker exec -d $DEPLOYMENT_CONTAINER bash -c "cd frontend && . deploy_flask_app.sh"
