Try to get rid of 'npm info' output in last Job log (774) meta#88

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build_react_app:
   stage: build
   script:
     - cd client/lampenhaus
-    - npm i
+    - npm install
     - npm run build
 
 deploy_flask_app:
