--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,20 +9,29 @@ variables:
   # name it 'flask_deployment-commit-<commit-hash>'
   DEPLOYMENT_CONTAINER: "flask_deployment-commit-${CI_COMMIT_SHA}"
 
-test_flask_api:
+lint_test_flask:
   stage: test
   script:
     - pip install -r requirements-dev.txt
+    - flake8 . # this also runs pydocstyle linting as a plugin of flake8 (see requirements.txt)
     - pytest
 
-build_react_app:
+lint_test_react:
+  stage: test
+  script:
+    - cd client/lampenhaus
+    - npm install
+    - ./node_modules/.bin/eslint .
+    - npm test
+
+build_react:
   stage: build
   script:
     - cd client/lampenhaus
     - npm install
     - npm run build
 
-deploy_flask_app:
+deploy_flask:
   image: python-node-docker
   stage: deploy
   only:
