--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -95,5 +95,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0"
   }
 }
