--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ lint_test_react:
     - cd client/lampenhaus
     - npm install
     - ./node_modules/.bin/eslint .
-    - npm test
+    - ./node_modules/.bin/jest
 
 build_react:
   stage: build
