Resolve last todos meta#88

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,6 @@ variables:
 
 lint_test_flask:
   stage: test
-  # TODO
-  allow_failure: true
   script:
     - pip install -r requirements-dev.txt
     - flake8 . # this also runs pydocstyle linting as a plugin of flake8 (see requirements.txt)
@@ -20,8 +18,6 @@ lint_test_flask:
 
 lint_test_react:
   stage: test
-  # TODO
-  allow_failure: true
   script:
     - cd client/lampenhaus
     - npm install
@@ -39,7 +35,7 @@ deploy_flask:
   image: python-node-docker
   stage: deploy
   only:
-    # TODO: change this to 'dev'
+    - dev
     - feature/frontend-deployment
   environment:
     name: dev
