Add first search api tests, make it possible to set Solr collection by name meta#111

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,4 +24,6 @@ test_flask_api:
   stage: test
   script:
     - pip install -r requirements-dev.txt
+    # make sure search API tests use the cluster Solr instance
+    - export LEUCHTTURMMODE="PRODUCTION"
     - pytest
