--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
 
 lint_test_flask:
   stage: test
-  allow-failure: true
+  allow_failure: true
   script:
     - pip install -r requirements-dev.txt
     - flake8 . # this also runs pydocstyle linting as a plugin of flake8 (see requirements.txt)
