--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ variables:
 
 lint_test_flask:
   stage: test
-  allow_failure: true
   script:
     - pip install -r requirements-dev.txt
     - flake8 . # this also runs pydocstyle linting as a plugin of flake8 (see requirements.txt)
@@ -23,7 +22,7 @@ lint_test_react:
     - cd client/lampenhaus
     - npm install
     - ./node_modules/.bin/eslint .
-    #./node_modules/.bin/jest
+    #./node_modules/.bin/jest --env=jsdom
     - npm test
 
 build_react:
