--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.1.1",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
+    "react-sigma": "^1.2.30",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
