--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ lint_test_flask:
   script:
     - pip install -r requirements-dev.txt
     - flake8 . # this also runs pydocstyle linting as a plugin of flake8 (see requirements.txt)
+    # needed for the Search API tests to be able to connect to the cluster Solr instance
+    - export LEUCHTTURMMODE="PRODUCTION"
     - pytest
 
 lint_test_react:
