Make react routing work when react app is served via flask meta#169
- refactor /app Flask routes into own blueprint
- add baseUrl to the React Router so that depending on the environment, app prefixed is used or not
- add /app to package.json so that React knows where to fetch its transpiled sources from

--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lampenhaus",
   "version": "0.1.0",
+  "homepage" : "/app",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
