--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,16 +18,15 @@ lint_test_flask:
     - export LEUCHTTURMMODE="PRODUCTION"
     - pytest
 
-lint_test_react:
+test_react:
   stage: test
   script:
     - cd client/lampenhaus
     - npm install
-    - ./node_modules/.bin/eslint .
     #./node_modules/.bin/jest --env=jsdom
     - npm test
 
-build_react:
+lint_build_react:
   stage: build
   script:
     - cd client/lampenhaus
