--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^2.0.0-beta.12",
     "reactstrap": "^5.0.0-alpha.4",
+    "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
