--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -10,16 +10,16 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.0",
+    "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "^0.28.7",
-    "d3": "^4.12.2",
+    "css-loader": "^0.28.10",
+    "d3": "^4.13.0",
     "dotenv": "4.0.0",
-    "eslint": "^4.10.0",
-    "eslint-config-react-app": "^2.0.1",
+    "eslint": "^4.18.1",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -31,21 +31,21 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.1.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fontawesome": "^1.6.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^2.0.0-beta.12",
-    "reactstrap": "^5.0.0-alpha.4",
+    "reactstrap": "^5.0.0-beta.2",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
