everything works now,  still need tests

--- a/common/config.ini
+++ b/common/config.ini
@@ -1,8 +1,8 @@
 # sets IP address and port of Solr instance running on cluster
 [SOLR_CONNECTION]
 Port: 8983
-Host: 172.18.20.111
-Core: enron_calo
+Host: sopedu.hpi.uni-potsdam.de
+Core: enron
 
 [NEO4J_CONNECTION]
 Host: b3986.byod.hpi.de
