--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.0.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.10",
     "d3": "^4.13.0",
     "dotenv": "4.0.0",
