Test ssh executor on Sopedu meta#292

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
   # name it 'flask_deployment-commit-<commit-hash>'
   DEPLOYMENT_CONTAINER: "flask_deployment-commit-${CI_COMMIT_SHA}"
 
-lint_test_flask:
+.lint_test_flask:
   stage: test
   script:
     - pip install -r requirements-dev.txt
@@ -26,14 +26,14 @@ lint_test_flask:
 #     #./node_modules/.bin/jest --env=jsdom
 #     - npm test
 
-lint_build_react:
+.lint_build_react:
   stage: build
   script:
     - cd client/lampenhaus
     - npm install
     - npm run build
 
-deploy_flask:
+.deploy_flask_dev:
   image: python-node-docker
   stage: deploy
   only:
@@ -57,4 +57,34 @@ deploy_flask:
     # execute deploy_frontend_odin.sh inside container to build React app and run Flask,
     # redirect all output to '/dev/console' so that it's accessible from Odin with docker logs flask_deployment-commit-<commit-hash>
     - docker exec -d $DEPLOYMENT_CONTAINER bash -c "cd frontend && . deploy_frontend_odin.sh > /dev/console"
+
+deploy_flask_master:
+#  image: python-node-docker
+  stage: deploy
+  tags:
+    - deploy-sopedu-cluster
+  only:
+    - master
+    - feature/deploy-master-to-sopedu
+  environment:
+    name: master
+    url: http://sopedu.hpi.uni-potsdam.de:5000/app/
+  script:
+    - users
+    # logging
+#    - docker ps -a | grep flask_deployment || true
+    # stop and remove old deployment container containing the string 'flask_deployment' if it exists
+    # || true makes sure that the job doesn't fail if there is no deployment container currently up and running
+#    - docker rm $(docker stop $(docker ps | grep "flask_deployment" | awk '{print $1}')) || true
+#    - docker ps -a | grep flask_deployment || true
+    # run new deployment container in detached mode with port mapping
+#    - docker run -d -it --name $DEPLOYMENT_CONTAINER -p 5000:5000 python-node /bin/sh
+#    - docker ps -a | grep flask_deployment || true
+    # copy relevant files
+#    - docker cp ../frontend $DEPLOYMENT_CONTAINER:/frontend
+    # execute deploy_frontend_odin.sh inside container to build React app and run Flask,
+    # redirect all output to '/dev/console' so that it's accessible from Odin with docker logs flask_deployment-commit-<commit-hash>
+#    - docker exec -d $DEPLOYMENT_CONTAINER bash -c "cd frontend && . deploy_frontend_odin.sh > /dev/console"
+
+
 
