--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.1.1",
+    "react-cookie": "^2.1.4",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-fontawesome": "^1.6.1",
