--- a/config/config-dnc.ini
+++ b/config/config-dnc.ini
@@ -2,9 +2,9 @@
 [SOLR_CONNECTION]
 Port: 8983
 Host: sopedu.hpi.uni-potsdam.de
-Core: enron
+Core: dnc
 
 # sets IP address and port of Neo4j instance running on cluster
 [NEO4J_CONNECTION]
 Host: sopedu.hpi.uni-potsdam.de
-Bolt-Port: 60000
+Bolt-Port: 61000
