--- a/config/config-dnc.ini
+++ b/config/config-dnc.ini
@@ -3,6 +3,7 @@
 Port: 8983
 Host: sopedu.hpi.uni-potsdam.de
 Core: dnc
+Core-Topics: dnc_topics
 
 # sets IP address and port of Neo4j instance running on cluster
 [NEO4J_CONNECTION]
