--- a/config/config-enron.ini
+++ b/config/config-enron.ini
@@ -3,6 +3,7 @@
 Port: 8983
 Host: sopedu.hpi.uni-potsdam.de
 Core: enron
+Core-Topics: enron_topics
 
 # sets IP address and port of Neo4j instance running on cluster
 [NEO4J_CONNECTION]
