--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -12,13 +12,13 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "^0.28.10",
-    "d3": "^5.0.0",
+    "css-loader": "^0.28.11",
+    "d3": "^5.2.0",
     "dotenv": "4.0.0",
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
@@ -31,22 +31,23 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
-    "react": "^16.1.1",
+    "react": "^16.3.2",
     "react-cookie": "^2.1.4",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^2.0.0-beta.12",
-    "reactstrap": "^5.0.0-beta.2",
+    "reactstrap": "^5.0.0",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
