adapted dnc config to get neo4j from vm
matrix working with roles now

--- a/config/config-dnc-sopedu.ini
+++ b/config/config-dnc-sopedu.ini
@@ -7,5 +7,5 @@ Core-Topics: dnc_topics
 
 # sets IP address and port of Neo4j instance running on cluster
 [NEO4J_CONNECTION]
-Host: 172.16.64.28
+Host: sopedu.hpi.uni-potsdam.de
 Bolt-Port: 61000
