Update configs to match current database setup meta#289 meta#388

--- a/config/config-enron-dev.ini
+++ b/config/config-enron-dev.ini
@@ -2,10 +2,10 @@
 [SOLR_CONNECTION]
 Port: 8983
 Host: sopedu.hpi.uni-potsdam.de
-Core: dnc
-Core-Topics: dnc_topics
+Core: enron_dev
+Core-Topics: enron_dev_topics
 
 # sets IP address and port of Neo4j instance running on cluster
 [NEO4J_CONNECTION]
-Host: sopedu.hpi.uni-potsdam.de
-Bolt-Port: 61000
+Host: 172.16.64.28
+Bolt-Port: 60000
