--- a/client/lampenhaus/package.json
+++ b/client/lampenhaus/package.json
@@ -16,7 +16,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "^0.28.11",
-    "d3": "^5.2.0",
+    "d3": "^5.4.0",
     "dotenv": "4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-react-app": "^2.1.0",
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.10",
+    "npm": "^6.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -39,7 +40,7 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.3.2",
-    "react-cookie": "^2.1.4",
+    "react-cookie": "^2.1.5",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
