Update enron master Neo4j config data meta#442

--- a/config/config-enron.ini
+++ b/config/config-enron.ini
@@ -7,5 +7,5 @@ Core-Topics: enron_topics
 
 # sets IP address and port of Neo4j instance running on cluster
 [NEO4J_CONNECTION]
-Host: sopedu.hpi.uni-potsdam.de
-Bolt-Port: 60000
+Host: 172.16.64.28
+Bolt-Port: 62000
